--- a/index.html
+++ b/index.html
@@ -182,9 +182,17 @@
             </div>
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
               <h3 class="resume-title">Professional Experience</h3>
-              <div class="resume-item">
+             <div class="resume-item">
+                <h4>Principal Consultant</h4>
+                <h5>2024 - Present</h5>
+                <p><em>Fraserhealth, Surrey</em></p>
+                <ul>
+              
+                </ul>
+              </div>
+               <div class="resume-item">
                 <h4>Technical Architect</h4>
-                <h5>2022 - Present</h5>
+                <h5>2022 - 2024</h5>
                 <p><em>Provincial Health Services Authority, Burnaby</em></p>
                 <ul>
               
