--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
              <div class="resume-item">
                 <h4>Principal Consultant</h4>
                 <h5>2024 - Present</h5>
-                <p><em>Fraserhealth, Surrey</em></p>
+                <p><em>Fraser Health Authority, Surrey</em></p>
                 <ul>
               
                 </ul>
